logs/agx.generator.buildout.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/agx'...
Listing './lib/python3.5/site-packages/agx/generator'...
Listing './lib/python3.5/site-packages/agx/generator/buildout'...
Listing './lib/python3.5/site-packages/agx/generator/buildout/profiles'...
Listing './lib/python3.5/site-packages/agx/generator/buildout/templates'...
Listing './lib/python3.5/site-packages/agx/generator/buildout/testing'...
Listing './lib/python3.5/site-packages/agx/generator/buildout/testing/data'...
Listing './lib/python3.5/site-packages/agx/generator/buildout/testing/data/agx.generator.buildout-sample'...
Compiling './lib/python3.5/site-packages/agx/generator/buildout/testing/data/agx.generator.buildout-sample/bootstrap.py'...
***   File "./lib/python3.5/site-packages/agx/generator/buildout/testing/data/agx.generator.buildout-sample/bootstrap.py", line 65
    exec urllib2.urlopen('http://python-distribute.org/distribute_setup.py'
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/agx/generator/buildout/testing/data/agx.generator.buildout-sample/src'...
Listing './lib/python3.5/site-packages/agx.generator.buildout-1.0a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
